@@ -1,12 +1,0 @@
-[Module]
-DisplayName=Sound support (Phonon)
-DisplayName[pl]=Obsługa dźwięków (Phonon)
-Description=Sound support via Phonon library
-Description[pl]=Obsługa dźwięku przez bibliotekę Phonon
-Author=Kadu Team
-Dependencies=sound
-Provides=sound_driver
-Replaces=alsa_sound ao_sound dsp_sound dshow_sound win32_sound
-Version=core
-LoadByDefault=true
-Category=Sound
